src/ui/snapshots/pg_glimpse__ui__snapshot_tests__footer_filter_mode.snap
---
source: src/ui/snapshot_tests.rs
assertion_line: 556
expression: buffer_to_string(&terminal)
---
 Filter   SELECT▌                                                                                   
 ⏎ confirm · Esc cancel
