src/ui/snapshots/pg_glimpse__ui__snapshot_tests__footer_live_blocking_panel.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
 Locks    ↑↓ nav · ⏎ inspect · Esc back                                                                                 
 ⇥ locks · w waits · t tables · R repl · v vacuum · x xid · I idx · S stmts · A wal · P cfg · E ext  │  ? help · , confi
