src/ui/snapshots/pg_glimpse__ui__snapshot_tests__footer_live_queries_panel.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
 Queries    ↑↓ nav · ⏎ inspect · s sort · / filter · C/K cancel/kill                                                    
 ⇥ locks · w waits · t tables · R repl · v vacuum · x xid · I idx · S stmts · A wal · P cfg · E ext  │  z zen · L replay
