src/ui/snapshots/pg_glimpse__ui__snapshot_tests__footer_live_table_stats_panel.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
 Tables    ↑↓ nav · ⏎ inspect · s sort · / filter · Esc back                                                            
 ⇥ locks · w waits · t tables · R repl · v vacuum · x xid · I idx · S stmts · A wal · P cfg · E ext  │  L replay · ? hel
