src/ui/snapshots/pg_glimpse__ui__snapshot_tests__footer_replay_mode.snap
---
source: src/ui/snapshot_tests.rs
expression: buffer_to_string(&terminal)
---
 Replay  Space play/pause · ←→ step · <> speed · g/G jump  ↑↓ nav · ⏎ inspect · s sort · / filter                       
 ⇥ locks · w waits · t tables · R repl · v vacuum · x xid · I idx · S stmts · A wal · P cfg · E ext  │  q quit
